--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
   justify-content: center;
   border-radius: 50%;
   cursor: pointer;
+  margin: 0.3rem;
   transition: background-color, color 0.2s ease;
 }
 
